#--------------------------------------------------------------------------
# File and Version Information:
#  $Id$
#
# Description:
#  ChangeLog file for package Detector
#------------------------------------------------------------------------

Package author: Mikhail S. Dubrovin

Please describe any modifications that you made to the package in the
reverse time order.

Tag: V00-01-01
2015-09-09 Mikhail S. Dubrovin
- multiple changes (PSAS-139)
	- add methods (runnum) in addition to (evt,env)
	- add python interface for geometry, intensity calibration constants
	- add switch between C++/Python interfaces
- update/add examples in examples/*

2015-08-24 Mikhail S. Dubrovin
- Add in GlobalUtils add string_from_source_v2 and change PyDetector.py to accept aliases (PSAS-139)

==============
	
Tag: V00-00-12
2015-08-11 Mikhail S. Dubrovin
- add app/det_ndarr_average and examples/ex_nda_average.py (PSAS-139)

Tag: V00-00-11
2015-08-05 Mikhail S. Dubrovin
- minor extension of examples.

Tag: V00-00-10
2015-07-21 Mikhail S. Dubrovin
- PyDetector.py - add protection and warnings for missing data/pedestal/mask in calib(.) (PSAS-139)
- add ex_cspad2x2_ts.py - access to data using timestamp.

Tag: V00-00-09
2015-07-14 Mikhail S. Dubrovin
- PyDetector.py - change interface to mask(.) as users requested (PSAS-139)

Tag: V00-00-08
2015-07-13 Mikhail S. Dubrovin
- Re-implement mask method to generate combined mask array, rename methods by user's request (PSAS-139)
  - DetectorAccess, pyext/pyDetector.cpp add parameter mbits in method pixel_mask_geo
  - PyDetector.py
	- rename method raw_data -> raw
	- rename method calib_data -> calib
	- rename method mask -> mask_calib
	- rename method print_members -> print_attributes
	- add parameter mbits in method mask_geo
	- add method mask(.)
	- adjust sphinx doc.
  - Add examples/ex_mask.py
  - Adjust other examples for renamed methods.

	
Tag: V00-00-07
2015-06-22 Mikhail S. Dubrovin